--- a/jiraWebhookTest2.csproj
+++ b/jiraWebhookTest2.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.sample.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.sample.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Atlassian.SDK" Version="12.4.0" />
     <PackageReference Include="CliWrap" Version="3.4.1" />
   </ItemGroup>
